--- a/main.qrc
+++ b/main.qrc
@@ -12,5 +12,38 @@
         <file alias="photo">photo.jpg</file>
         <file alias="close">close.png</file>
         <file alias="min">min.png</file>
+        <file alias="system_photo1">system_photo1.jpg</file>
+        <file alias="system_photo2">system_photo2.jpg</file>
+        <file alias="system_photo3">system_photo3.jpg</file>
+    </qresource>
+    <qresource prefix="/qq">
+        <file>icon_contacts_hover.png</file>
+        <file>icon_contacts_normal.png</file>
+        <file>icon_contacts_selected.png</file>
+        <file>icon_group_hover.png</file>
+        <file>icon_group_normal.png</file>
+        <file>icon_group_selected.png</file>
+        <file>icon_last_hover.png</file>
+        <file>icon_last_normal.png</file>
+        <file>icon_last_selected.png</file>
+        <file>checkbox_check_hightlight.png</file>
+        <file>checkbox_check_normal.png</file>
+        <file>checkbox_pushed.png</file>
+        <file>checkbox_uncheck_hightlight.png</file>
+        <file>checkbox_uncheck_normal.png</file>
+        <file>login_bkg.png</file>
+        <file>tips_close_h.png</file>
+        <file>tips_close_n.png</file>
+        <file>tips_close_p.png</file>
+        <file>btn_mini_normal.png</file>
+        <file>btn_mini_down.png</file>
+        <file>authority_down.png</file>
+        <file>authority_hover.png</file>
+        <file>authority_normal.png</file>
+        <file>arrow_hover.png</file>
+        <file>arrow_normal.png</file>
+    </qresource>
+    <qresource prefix="/gif">
+        <file>logbackground.gif</file>
     </qresource>
 </RCC>
