--- a/main.qrc
+++ b/main.qrc
@@ -38,6 +38,12 @@
         <file>resource_image/tips_close_h.png</file>
         <file>resource_image/tips_close_n.png</file>
         <file>resource_image/tips_close_p.png</file>
+        <file>resource_image/comment_send_warn.png</file>
+        <file>resource_image/nextbtn_highlight.png</file>
+        <file>resource_image/nextbtn_normal.png</file>
+        <file>resource_image/qzone_normal.png</file>
+        <file>resource_image/qzone_hover.png</file>
+        <file>resource_image/qzone_selected.png</file>
     </qresource>
     <qresource prefix="/gif">
         <file>resource_image/logbackground.gif</file>
