--- a/chatdialog.ui
+++ b/chatdialog.ui
@@ -80,7 +80,7 @@
      <rect>
       <x>30</x>
       <y>260</y>
-      <width>213</width>
+      <width>161</width>
       <height>22</height>
      </rect>
     </property>
@@ -88,7 +88,7 @@
    <widget class="QComboBox" name="sizeCbx">
     <property name="geometry">
      <rect>
-      <x>250</x>
+      <x>200</x>
       <y>260</y>
       <width>69</width>
       <height>22</height>
@@ -215,14 +215,27 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>320</x>
+      <x>280</x>
       <y>260</y>
-      <width>75</width>
+      <width>21</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>图</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="ChatRe">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>260</y>
+      <width>31</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>记录</string>
     </property>
    </widget>
   </widget>
