--- a/chatdialog.ui
+++ b/chatdialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>728</width>
+    <width>740</width>
     <height>450</height>
    </rect>
   </property>
@@ -45,35 +45,6 @@
       <height>71</height>
      </rect>
     </property>
-   </widget>
-   <widget class="QTableWidget" name="usrTblWidget">
-    <property name="geometry">
-     <rect>
-      <x>490</x>
-      <y>10</y>
-      <width>211</width>
-      <height>361</height>
-     </rect>
-    </property>
-    <property name="selectionMode">
-     <enum>QAbstractItemView::SingleSelection</enum>
-    </property>
-    <property name="selectionBehavior">
-     <enum>QAbstractItemView::SelectRows</enum>
-    </property>
-    <property name="showGrid">
-     <bool>false</bool>
-    </property>
-    <column>
-     <property name="text">
-      <string>对象</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>IP地址</string>
-     </property>
-    </column>
    </widget>
    <widget class="QFontComboBox" name="fontCbx">
     <property name="geometry">
@@ -176,7 +147,7 @@
    <widget class="QPushButton" name="sendBtn">
     <property name="geometry">
      <rect>
-      <x>390</x>
+      <x>370</x>
       <y>370</y>
       <width>75</width>
       <height>23</height>
@@ -197,19 +168,6 @@
     </property>
     <property name="text">
      <string>TextLabel</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="exitBtn">
-    <property name="geometry">
-     <rect>
-      <x>630</x>
-      <y>370</y>
-      <width>75</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>退出</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton">
@@ -238,13 +196,36 @@
      <string>记录</string>
     </property>
    </widget>
+   <widget class="QTextBrowser" name="textBrowser">
+    <property name="geometry">
+     <rect>
+      <x>480</x>
+      <y>30</y>
+      <width>241</width>
+      <height>331</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="Recordlabel">
+    <property name="geometry">
+     <rect>
+      <x>480</x>
+      <y>10</y>
+      <width>54</width>
+      <height>12</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>聊天记录：</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>728</width>
+     <width>740</width>
      <height>23</height>
     </rect>
    </property>
