--- a/main.qrc
+++ b/main.qrc
@@ -52,6 +52,12 @@
         <file>resource_image/main_panel_tab_inco_normal.png</file>
         <file>resource_image/main_panel_tab_inco_selected.png</file>
         <file>resource_image/QQlogo.png</file>
+        <file>resource_image/find.png</file>
+        <file>resource_image/find_down.png</file>
+        <file>resource_image/find_hover.png</file>
+        <file>resource_image/Tools.png</file>
+        <file>resource_image/tools_down.png</file>
+        <file>resource_image/tools_hover.png</file>
     </qresource>
     <qresource prefix="/gif">
         <file>resource_image/logbackground.gif</file>
